Bug 251414 - Event monitor crashes kst2
Summary: Event monitor crashes kst2
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.1
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 2.0.1
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-16 08:30 UTC by Nicolas Brisset
Modified: 2010-11-12 10:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2010-09-16 08:30:26 UTC
Version:           2.0.1
OS:                Linux

When defining an event monitor, kst2 crashes. See below for steps to reproduce.
Another small quirk is that vector names are not copied to the lineedit when vectors are selected in the combobox, as they are in the equation dialog for instance. This means you have to type vector names by hand, which is a bit cumbersome.

Reproducible: Always

Steps to Reproduce:
- load Column 1 vs INDEX from gyrodata.dat
- Data manager -> Create event monitor (this really ought to be available from the Create menu, I'll fix that)
- Enter "[Column 1 (V2)]>1.9" in the "Expression" box and tick "Log" as "Notice" (note: the radiobuttons there should be activated depending on the state of the "Log" checkbox)
- Click "OK" => crash


Expected Results:  
kst should not crash

Seems to happen only under Linux (Suse Enterprise 10.2 with hand-compiled Qt 4.5.3 and current kst2 from svn), I can't reproduce it under Windows (2.0.1 beta 2)
Comment 1 Nicolas Brisset 2010-09-16 09:26:28 UTC
On Windows it does not crash, but the produced log is not usable: only the first value is OK, see last line below:  
 Do 16. Sep 08:11:31 2010 Scanning for data-object plugins.
 [...]
 Do 16. Sep 08:11:35 2010 Scanning for data-source plugins.
 Do 16. Sep 08:11:35 2010 Plugin loaded: kst2data_ascii.dll
 Do 16. Sep 08:11:35 2010 Plugin loaded: kst2data_dirfilesource.dll
 Do 16. Sep 08:11:35 2010 Plugin loaded: kst2data_netcdfsource.dll
 Do 16. Sep 08:11:35 2010 Plugin loaded: kst2data_qimagesource.dll
 Do 16. Sep 08:11:35 2010 Plugin loaded: kst2data_sampledatasource.dll
 Do 16. Sep 08:18:12 2010 Event Monitor: [Var1 (V2)]>1.9: 30299, ^, ` - , f, d - $, j, X, [, ], `, %, ', ) - , 3, Ù, Ü, ß - - - %xj³ - - j, U, [
Comment 2 Peter Kümmel 2010-09-19 11:55:29 UTC
SVN commit 1177075 by kuemmel:

QString::operator+=  makes some stupid things with ints.

BUG: 251414

 M  +3 -6      eventmonitorentry.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1177075
Comment 3 Peter Kümmel 2010-11-12 10:37:11 UTC
There is no version list for "Version Fixed in".
Use Target Milestone as indicator when the bug was fixed.