QString::operator+=  makes some stupid things with ints.

BUG: 251414

git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1177075 283d02a7-25f6-0310-bc7c-ecb5cbfe19da